--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -36,7 +36,7 @@
         <!-- <div class="ion-text-center single-menu-item more-option"> 
           <a class="icon-more" href="#"> More <i class="fa fa-fw fa-angle-double-down"></i></a> -->
       <!-- </div> -->
-      <ul class="dropdown-content">
+      <!-- <ul class="dropdown-content">
         <li>
           <div class="user-menu-title ion-text-capitalize">Salads</div>
         </li>
@@ -52,7 +52,7 @@
         <li>
           <div class="user-menu-title ion-text-capitalize">Pasta</div>
         </li>
-      </ul>
+      </ul> -->
     </div>
   </div>
   
