--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -51,12 +51,20 @@
         <h5 class="card-title mb-3 text-reset">{{user?.Name}}</h5>
         <p class="text-reset">{{user?.Description}}</p>
       <h5>{{user?.Sizes}}</h5>
-      <h6 class="mb-3">{{user?.Price}}</h6>
+      @if (user.smallPrice) {
+      <h6 class="mb-3">{{user?.smallPrice}}</h6>
+      }
+      @else if (user.mediumPrice) {
+        <h6 class="mb-3">{{user?.mediumPrice}}</h6>
+        }
+        @else {
+          <h6 class="mb-3">{{user?.Large}}</h6>
+        }
     </button>
       <div class="d-flex justify-content-around">
-        <div><button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button></div>
-        <p class="fs-4">5</p>
-        <div><button class="btn btn-success"><i class="fa-solid fa-plus"></i></button></div>
+        <div><button class="btn btn-danger" (click)="Decreament()"><i class="fa-solid fa-trash-can"></i></button></div>
+        <p class="fs-4">{{itemQuantity}}</p>
+        <div><button class="btn btn-success" (click)="Increament()"><i class="fa-solid fa-plus"></i></button></div>
       </div>
     </div>
   </div>
