--- a/src/app/Components/my_cart/my-cart.component.html
+++ b/src/app/Components/my_cart/my-cart.component.html
@@ -133,7 +133,7 @@
                 </div>
                 <div class="modal-footer" style="border: none;">
                   <button type="button" class="btn btn-success btn-custom " style="width: 18%; font-size:large;"
-                    data-bs-dismiss="modal"  (click)="closeAndNavigateHome()">Close</button>
+                    data-bs-dismiss="modal" routerLink="/"  (click)="closeAndNavigateHome()">Close</button>
                 </div>
               </div>
             </div>
