--- a/src/app/Products-CRUD-FILTER/product-details/product-details.component.html
+++ b/src/app/Products-CRUD-FILTER/product-details/product-details.component.html
@@ -1,5 +1,3 @@
- <p>product-Details works!</p>
-
 <div class="">
 <table class="table">
     <thead class="thead-dark">
@@ -19,7 +17,7 @@
           <td>{{onePizza.Name}}</td>
           <td>{{onePizza.Description}}</td>
           <td>{{onePizza.Sizes}}</td>
-          <td>{{onePizza.Price}}</td>
+          <td>{{onePizza.price}}</td>
           <td><img src="{{onePizza.Image}}" width="100px" height="100px"> </td>
           <td>
             <div class="dropdown">
