--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -1,70 +1,34 @@
-
-<!-- &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&& -->
-
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content" style="background-color: rgb(31, 32, 68)!important;">
-      <div class="modal-header" style="font-family: cursive; background-color: rgb(247, 203, 146) !important;">
-        <h1 class="modal-title fs-5 fw-bolder" id="exampleModalLabel">{{user?.Name}}</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<div class="mycard card">
+  <div class="parent text-center"> <!-- Added text-center -->
+    <img src="{{user?.Image}}" class="w-75 child" />
+    <div>
+      <div class="d-flex justify-content-start align-items-end h-100">
+        <h5><span class="badge bg-primary ms-2">New</span></h5>
       </div>
-      <div class="modal-dialog modal-dialog-scrollable d-flex justify-content-center" style="background-color: rgb(31, 32, 68)!important; width: 100%;">
-        <!-- Here -->
-        
-        <div class="card border-0" style="width: 18rem;">
-          <img src="{{user?.Image}}" class="card-img-top">
-          <div class="card-body" style="font-family: cursive;">
-            <h5 class="card-title">{{user?.Name}}</h5>
-            <p class="card-text">{{user?.Description}}</p>
-            <p class="card-text fw-bolder">{{user?.Sizes}}</p>
-            <p class="card-text"><span class="bg-success rounded text-white p-2">{{user?.Price}}</span></p>
-          </div>
-        </div>
-
-        <!--  Here -->
-      </div>
-      <div class="modal-footer" style="background-color:rgb(247, 203, 146) !important;">
-        <button class="dropdown-item" routerLink="/pizza/updatepizza/{{1}}"><i class="bi bi-pencil-square"></i></button>
-        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-      </div>
+    </div>
+  </div>
+  
+  <div class="card-body">
+    <!-- Card Details -->
+    <button type="button" class="border-0 bg-transparent" (click)="ItemDetails()" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      <p class="card-title fs-5 fw-medium">{{user?.Name}}</p>
+      <!-- <p class="text-reset">{{user?.Description}}</p> -->
+      <p class="fs-6">{{user?.Sizes}}</p>
+      @if (user.smallPrice) {
+      <p class="mb-3">{{user?.smallPrice}}</p>
+      }
+      @else if (user.mediumPrice) {
+      <p class="mb-3">{{user?.mediumPrice}}</p>
+      }
+      @else {
+      <p class="mb-3">{{user?.Large}}</p>
+      } 
+    </button>
+    <!-- Card Buttons -->
+    <div class="d-flex justify-content-around">
+      <div><button class="btn btn-danger" (click)="Decreament()"><i class="fa-solid fa-trash-can"></i></button></div>
+      <p class="fs-4">{{itemQuantity}}</p>
+      <div><button class="btn btn-success" (click)="Increament()"><i class="fa-solid fa-plus"></i></button></div>
     </div>
   </div>
 </div>
-<!-- &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&& -->
-
-
-
-
-<div class="mycard card">
-    <div class="parent text-center">  <!-- Added text-center -->
-      <img src="{{user?.Image}}" class="w-75 child" />
-        <div>
-          <div class="d-flex justify-content-start align-items-end h-100">
-            <h5><span class="badge bg-primary ms-2">New</span></h5>
-          </div>
-        </div>
-    </div>
-    <div class="card-body">
-    <button type="button" class="model-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        <h5 class="card-title mb-3 text-reset">{{user?.Name}}</h5>
-        <p class="text-reset">{{user?.Description}}</p>
-      <h5>{{user?.Sizes}}</h5>
-      @if (user.smallPrice) {
-      <h6 class="mb-3">{{user?.smallPrice}}</h6>
-      }
-      @else if (user.mediumPrice) {
-        <h6 class="mb-3">{{user?.mediumPrice}}</h6>
-        }
-        @else {
-          <h6 class="mb-3">{{user?.Large}}</h6>
-        }
-    </button>
-      <div class="d-flex justify-content-around">
-        <div><button class="btn btn-danger" (click)="Decreament()"><i class="fa-solid fa-trash-can"></i></button></div>
-        <p class="fs-4">{{itemQuantity}}</p>
-        <div><button class="btn btn-success" (click)="Increament()"><i class="fa-solid fa-plus"></i></button></div>
-      </div>
-    </div>
-  </div>
