--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,10 @@ html, body{
     overflow-x: hidden; 
   }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cdk-global-overlay-wrapper{
+  background-color: #2F2F2F;
+} 
