--- a/src/app/Products-CRUD-FILTER/product-details/product-details.component.html
+++ b/src/app/Products-CRUD-FILTER/product-details/product-details.component.html
@@ -1,6 +1,6 @@
-<div class="">
+<!-- <div class="container-fluid col-10 mt-5 pt-5 text-center">
 <table class="table">
-    <thead class="thead-dark">
+    <thead class="table-dark fs-3">
       <tr>
         <th scope="col">Id</th>
         <th scope="col">Name</th>
@@ -12,7 +12,7 @@
       </tr>
     </thead>
     <tbody>
-        <tr>
+        <tr class="fs-5">
           <td>{{onePizza.id}}</td>
           <td>{{onePizza.Name}}</td>
           <td>{{onePizza.Description}}</td>
@@ -26,9 +26,7 @@
                 Action
               </button>
               <ul class="dropdown-menu text-center">
-                <!-- <<<<<<< Update >>>>>>> -->
-                <li><a class="dropdown-item"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="green"
-                      class="bi bi-pencil-square" viewBox="0 0 16 16">
+                <li><a class="dropdown-item" routerLink="/pizza/updatepizza/{{onePizza.id}}"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="green" class="bi bi-pencil-square" viewBox="0 0 16 16">
                       <path
                         d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
                       <path fill-rule="evenodd"
@@ -36,7 +34,6 @@
                     </svg></a></li>
 
 
-                <!-- <<<<<<< Delete >>>>>>> -->
                 <li>
                   <button class="dropdown-item" (click)="DeletePizza(onePizza.id)"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                       fill="red" class="bi bi-trash3-fill" viewBox="0 0 16 16">
@@ -50,4 +47,38 @@
         </tr>
     </tbody>
   </table>
-</div> 
+</div>  -->
+
+<div class="container-fluid h-75" style="background-color:rgb(97, 97, 97);"><!--style="margin: 7rem 0px;"-->
+
+<div class="card w-50 border-0 mx-auto text-center rounded-4" style="margin-top: 100px;">
+  <img src="{{onePizza?.Image}}" class="card-img-top w-25 mx-auto">
+  <div class="card-body rounded-5  mx-auto mb-5 p-4 w-75" style="background-color:bisque;">
+    <p class="card-title fs-2" style="font-family: cursive;">{{onePizza?.Name}}</p>
+    <p class="card-text fs-5 mt-4">{{onePizza?.Description}}</p>
+  
+  <ul class="list-group-flush">
+    <li class="list-group-item fs-5">{{onePizza?.Sizes}}</li>
+    <li class="list-group-item text-white bg-success mt-2  p-2 mx-auto rounded-3" style="width: fit-content;">{{onePizza?.price | currency:'EGP '}}</li>
+    <!-- <li class="list-group-item">{{onePizza.}}</li> -->
+  </ul>
+  <!-- <P class="m-0 bg-dark text-white mx-auto p-2 rounded-2 " style="width: fit-content;">Actions</P>
+  <div class="card-body d-flex mx-auto w-25">
+    <a class="dropdown-item" routerLink="/pizza/updatepizza/{{onePizza.id}}"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="green" class="bi bi-pencil-square" viewBox="0 0 16 16">
+      <path
+        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+      <path fill-rule="evenodd"
+        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+    </svg></a>
+
+
+    <button class="dropdown-item" (click)="DeletePizza(onePizza.id)"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+      fill="red" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+      <path
+        d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
+    </svg></button>
+
+  </div> -->
+</div>
+</div>
+</div>
