--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   
-  <div class="card-body">
+  <div class="card-body text-center">
     <!-- Card Details -->
     <button type="button" class="border-0 bg-transparent" (click)="ItemDetails()" data-bs-toggle="modal" data-bs-target="#exampleModal">
       <p class="card-title fs-5 fw-medium">{{user?.Name}}</p>
