--- a/src/app/Products-CRUD-FILTER/update-product/update-product.component.css
+++ b/src/app/Products-CRUD-FILTER/update-product/update-product.component.css
@@ -1,28 +1,17 @@
-.bg-img{
-    margin-top: 70px;
-    width: 100%;
-    height: 100vh;
-    padding: 0;
-    border-radius: 20px;
+.container-fluid{
     background-image:url("/assets/Images/form.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-
 .overlay {
     background-color: rgba(139, 139, 139, 0.6);
-    height: 100%;
-    padding-top: 50px;
 }
 
 
 form{
     background-color: rgb(22, 27, 69,0.7);
-    width: 50%;
-    padding: 20px;
-    border-radius: 25px;
 }
 
 input{
